# ML_for_NLP

./: .gitattributes  README.md  pyproject.toml
tasks/bonus/1/: README.md  log_likelihood.py  static_idioms.txt  trigrams_estimation_cli.py
