[tool.poetry]
name = "ml_for_nlp"
version = "0.1.0"
description = ""
authors = ["Mr. Oleksandr Tarasov <tarasik201617@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
nltk = "^3.6.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
